# deo

./: .gitignore  README.md  pyproject.toml
deo/: __init__.py  combines_parts.py  date_helpers.py  misc.py  mssql.py
tests/: test_mssql.py
